--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,7 @@
           <script type="text/javascript">
             document.getElementById('forum_embed').src =
                'https://groups.google.com/forum/embed/?place=forum/readops'
-               + '&showsearch=false&showpopout=false&showtabs=false&hideforumtitle=true&theme=default'
+               + '&showsearch=false&showpopout=false&showtabs=false&hideforumtitle=true'
                + '&parenturl=' + encodeURIComponent(window.location.href);
           </script>
         </section>
