Move the welcome message to the main page

--- a/index.html
+++ b/index.html
@@ -19,10 +19,31 @@
 
         <header>
           <h1>ReadOps</h1>
-          <h2>A virtual bookclub for people interested in ops</h2>
+          <h2>A virtual bookclub for people interested in tech ops</h2>
         </header>
-
+        
         <section id="main_content">
+          <p>
+            Welcome to ReadOps! We're still getting organized, but let's get started anyway.
+          </p>
+
+          <p>
+            For May, we're going to read Mark Burgess's In Search of Certainty. Here's a (proposed) schedule:
+          </p>
+          <ul>
+            <li>finish Part 1: Stability by May 10th,</li>
+            <li>finish Part 2: Certainty by May 17th,</li>
+            <li>finish Part 3: Promises by May 24th, and</li>
+            <li>meet in a Hangout to discuss in person on Thursday, May 29th (so that we don't conflict with HangOps).</li>
+          </ul>
+          <p>
+            The general idea would be to discuss the book via this group all along before the final in-person chat.
+          </p>
+
+          <p>
+            Suggestions (for schedule, format, and the next book) are welcome!
+          </p>
+        
           <iframe id="forum_embed"
             src="javascript:void(0)"
             scrolling="no"
