--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           </p>
 
           <p>
-            For May, we're going to read Mark Burgess's In Search of Certainty. Here's a (proposed) schedule:
+            For May, we're going to read <a href="http://markburgess.org/">Mark Burgess</a>'s <a href="http://www.amazon.com/gp/product/B00ENEEWYO/ref=s9_simh_gw_p351_d0_i1?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=center-3&pf_rd_r=12GAH5GFPS95J45WGHYM&pf_rd_t=101&pf_rd_p=1688200422&pf_rd_i=507846">In Search of Certainty</a>. Here's a (proposed) schedule:
           </p>
           <ul>
             <li>finish Part 1: Stability by May 10th,</li>
             <li>finish Part 2: Certainty by May 17th,</li>
             <li>finish Part 3: Promises by May 24th, and</li>
-            <li>meet in a Hangout to discuss in person on Thursday, May 29th (so that we don't conflict with HangOps).</li>
+            <li>meet in a Hangout to discuss in person on Thursday, May 29th (so that we don't conflict with <a href="http://www.hangops.com/">HangOps</a>).</li>
           </ul>
           <p>
             The general idea would be to discuss the book via this group all along before the final in-person chat.
