--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>meet in a Hangout to discuss in person on Thursday, May 29th (so that we don't conflict with <a href="http://www.hangops.com/">HangOps</a>).</li>
           </ul>
           <p>
-            The general idea would be to discuss the book via this group all along before the final in-person chat.
+            The general idea is to discuss the book via the Google Group through the month, then all get together at the end to chat and wrap things up.
           </p>
 
           <p>
